# simple_msp_gcs_sdl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  nanogui_sdl_include.cmake  simple_msp_gcs.cpp
app/: flow_mode.cpp  flow_mode.h  shape_detection_mode.cpp  shape_detection_mode.h  simple_msp_gcs.cpp  video_log.cpp  video_log.h  video_stream_part.cpp  video_stream_part.h
gui/: gui.cpp  gui.h
msp_protocol/: msp_protocol.cpp  msp_protocol.h
serial_setup/: serial_setup.cpp  serial_setup.h
